--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -35,6 +35,7 @@
 			<groupId>com.azilzor</groupId>
 			<artifactId>proto</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 
